<package format="2">
  <name>nas</name>
  <version>0.0.1</version>
  <description>The nas package</description>

  <maintainer email="user@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend> -->

  <export>
  </export>
</package>